# django-oauth-toolkit-spa

./: .gitignore  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
oauth_toolkit_cookie_refresh/: apps.py  mixins.py  serializers.py  settings.py  urls.py  views.py
oauth_toolkit_spa/: apps.py  mixins.py
tests/: settings.py  test_auth_views.py  urls.py
